# cw_tari_wallet

./: .gitignore  Cargo.toml  Makefile  README.md  flutter_rust_bridge.yaml
.dart/: pubspec.yaml
src/: frb_generated.rs  lib.rs
src/api/: address.rs  balance.rs  db.rs  mod.rs  network.rs  scanner.rs  seeds.rs  send_transaction.rs  transactions.rs  wallet.rs
