[package]
name = "rust_lib_flutter_rust_wallet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
flutter_rust_bridge = "=2.11.1"
minotari-wallet = { package = "minotari", git = "https://github.com/martinserts/minotari-cli.git", branch = "rework-db-layer" }
once_cell = "1.21.3"
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"
tari_common = { git = "https://github.com/tari-project/tari.git", rev = "32b2e748cc1800823aebfa1d32799d2d9fee3bf5" }
tari_common_types = { git = "https://github.com/tari-project/tari.git", rev = "32b2e748cc1800823aebfa1d32799d2d9fee3bf5" }
tari_crypto = "0.22.1"
tari_transaction_components = { git = "https://github.com/tari-project/tari.git", rev = "32b2e748cc1800823aebfa1d32799d2d9fee3bf5" }
tari_utilities = "0.8.0"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["rt"] }
uuid = "1.19.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
